; ModuleID = '/home/carl/AnghaBench/libgit2/tests/describe/extr_t6120.c_test_describe_t6120__tags.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/describe/extr_t6120.c_test_describe_t6120__tags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_DESCRIBE_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GIT_DESCRIBE_FORMAT_OPTIONS_INIT = common dso_local global i32 0, align 4
@GIT_DESCRIBE_TAGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"c-*\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@repo = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [6 x i8] c"HEAD^\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"e-*\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"HEAD^^\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"HEAD^^2\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"B\00", align 1
@.str.7 = private unnamed_addr constant [9 x i8] c"HEAD^^2^\00", align 1
@.str.8 = private unnamed_addr constant [2 x i8] c"e\00", align 1
@.str.9 = private unnamed_addr constant [8 x i8] c"HEAD^^^\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_describe_t6120__tags() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = alloca i32, align 4
  %3 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %3, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_DESCRIBE_OPTIONS_INIT to i8*), i64 4, i1 false)
  %4 = load i32, i32* @GIT_DESCRIBE_FORMAT_OPTIONS_INIT, align 4
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* @GIT_DESCRIBE_TAGS, align 4
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 %5, i32* %6, align 4
  %7 = load i32, i32* @repo, align 4
  %8 = call i32 @assert_describe(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %7, %struct.TYPE_4__* %1, i32* %2)
  %9 = load i32, i32* @repo, align 4
  %10 = call i32 @assert_describe(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i32 %9, %struct.TYPE_4__* %1, i32* %2)
  %11 = load i32, i32* @repo, align 4
  %12 = call i32 @assert_describe(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i32 %11, %struct.TYPE_4__* %1, i32* %2)
  %13 = load i32, i32* @repo, align 4
  %14 = call i32 @assert_describe(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i32 %13, %struct.TYPE_4__* %1, i32* %2)
  %15 = load i32, i32* @repo, align 4
  %16 = call i32 @assert_describe(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.7, i64 0, i64 0), i32 %15, %struct.TYPE_4__* %1, i32* %2)
  %17 = load i32, i32* @repo, align 4
  %18 = call i32 @assert_describe(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.9, i64 0, i64 0), i32 %17, %struct.TYPE_4__* %1, i32* %2)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @assert_describe(i8*, i8*, i32, %struct.TYPE_4__*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
